<resources>
    <string name="app_name">Operaciones</string>
    <string name="titulo">TÍTULO</string>
    <string name="resultado">Resultado</string>
    <string name="primer_numero">Primer Número</string>
    <string name="segundo_numero">Segundo Número</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="mensaje_error_uno">Digite el número uno</string>
    <string name="mensaje_error_dos">Digite el número dos</string>
</resources>
